# Tresca

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml
crates/tresca-app/: cargo.toml
crates/tresca-app/src/: camera_controller.rs  input.rs  main.rs  scene.rs  window.rs
crates/tresca-core/: cargo.toml
crates/tresca-core/src/: chunk.rs  coords.rs  error.rs  lib.rs  material.rs  voxel.rs  world.rs
crates/tresca-physics/: cargo.toml
crates/tresca-physics/src/: body.rs  contact.rs  forces.rs  integration.rs  lib.rs
crates/tresca-physics/src/collision/: broadphase.rs  narrowphase.rs
crates/tresca-render/: cargo.toml
crates/tresca-render/src/: camera.rs  debug.rs  lib.rs  renderer.rs
crates/tresca-render/src/gpu/: buffer.rs  device.rs  mod.rs  texture.rs
crates/tresca-render/src/mesh/: greedy.rs  mod.rs  naive.rs  surface_nets.rs
crates/tresca-render/src/pipeline/: decals.rs  forward.rs  mod.rs  post.rs
crates/tresca-render/src/shaders/: debug.wgsl  decal.wgsl  post.wgsl  voxel.wgsl
crates/tresca-structural/: cargo.toml
crates/tresca-structural/src/: anchor.rs  graph.rs  lib.rs  load.rs  solver.rs  yield_criterion.rs
crates/tresca-structural/src/shaders/: solver.wgsl
