[workspace]
resolver = "2"
members = [
    "crates/tresca-core",
    "crates/tresca-render",
    "crates/tresca-physics",
    "crates/tresca-structural",
    "crates/tresca-app"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/jbgilliard/Tresca"
authors = ["jbgilliard"]
rust-version = "1.85"

[workspace.dependencies]
# Graphics
wgpu = "23"
winit = "0.30"
bytemuck = {version = "1.21", features = ["derive"]}
glam = {version = "0.30", features = ["bytemuck"]}

# Math / parallelism
nalgebra = "0.33"
rayon = "1.10"
ahash = "0.8"

#Diagnostics
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
thiserror = "2"
anyhow = "1"

#Internal crates
tresca-core = {path = "crates/tresca-core"}
tresca-render = {path = "crates/tresca-render"}
tresca-physics = {path = "crates/tresca-physics"}
tresca-structural = {path = "crates/tresca-structural"}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
